--- a/PA1.Rmd
+++ b/PA1.Rmd
@@ -7,73 +7,109 @@ output: html_document
 
 ## Exponential Distribution compared with Central Limit Theorem
 
+
 #### Overview
 
 In this project the exponential distribution was investigated and compared it with the Central Limit Theorem. 
-The investigation was focused on the distribution of averages of 40 exponentials. 
-Note that was necesserary to do a thousand simulations.
+The investigation was focused on the distribution of averages of 40 exponentials using lambda = 0.2 for all the simulations. Note that was necesserary to do a thousand simulations.
 
 #### Setting Workspace
 ```{r setting_workspace}
-setwd("~/CESAR/BIGDATA/datasciencecoursera/statinference-030/project01")
+#setwd("~/thiagoveras/datasciencecoursera/statinference-030/project01")
 echo = TRUE
 set.seed(1)
+library(ggplot2)
 ```
 
 #### Simulations
-##### Include English explanations of the simulations you ran, with the accompanying R code. Your explanations should make clear what the R code accomplishes.
 ```{r}
 # Setting the variables as defined in the problem
-number_of_values <- 40
-number_of_interations <- 0.2
+# Investigating the distribution of averages of 40 exponentials. 
+number <- 40
+# Setting the lambda = 0.2 for all of simulations.
+lambda <- 0.2
+# Defining the number os simulations.
 number_of_simulations <- 1000
 
-# Creating the data simulation
-dataset <- matrix(rexp(number_of_values*number_of_simulations, number_of_interations), number_of_simulations)
-head(dataset, n = 10)
+# Creating the data set
+# The exponential distribution can be simulated in R with rexp(n, lambda) where lambda is the rate parameter.
+dataset <- matrix(rexp(number * number_of_simulations, lambda), 
+                  number_of_simulations)
 
 row_means <- apply(dataset, 1, mean)
-head(row_means, n = 10)
 
-row_means_data_frame <-data.frame(row_means) # convert to data.frame for ggplot
+# Converting the data to a data frame for ggplot
+row_means_data_frame <-data.frame(row_means)
 ```
 
 #### Sample Mean versus Theoretical Mean
-##### Include figures with titles. In the figures, highlight the means you are comparing. Include text that explains the figures and what is shown on them, and provides appropriate numbers.
 ```{r}
-theory_mean <- 1 / number_of_interations
-theory_mean
+# Calculating Sample Mean
+sample_mean <- mean(row_means)
+# Calculating Theoretical Mean
+theoretical_mean <- 1 / lambda
 
-actual_mean <- mean(row_means)
-round(actual_mean, digits=3)
+# Creating a Data Frame with the results
+type = c("sample", "theoretical")
+value = c(round(sample_mean, digits=3), 
+          round(theoretical_mean, digits=3))
+df_mean = data.frame(value, type)
+
+# Ploting the results
+qplot(type, value, data=df_mean, 
+      main="Sample Mean versus Theoretical Mean",
+      xlab="", ylab="Mean") +
+      ylim(4.7,5.2)
 ```
+
+The sample mean is ***`r round(sample_mean, digits=3) `*** and the theretical mean is ***`r round(theoretical_mean, digits=3)`*** . The difference is minimal as seen in the chart above.
 
 #### Sample Variance versus Theoretical Variance
-##### Include figures (output from R) with titles. Highlight the variances you are comparing. Include text that explains your understanding of the differences of the variances.
 ```{r}
-theory_standard_deviation <- ((1/number_of_interations) * (1/sqrt(number_of_values)))
-round(theory_standard_deviation, digits=3)
+# Calculating Sample Standard Deviation
+sample_standard_deviation <- sd(row_means)
+# Calculating Theoretical Standard Deviation
+theoretical_standard_deviation <- ((1/lambda) * (1/sqrt(number)))
+# Calculating Sample Variance
+sample_variance <- var(row_means)
+# Calculating Theoretical Variance
+theoretical_variance <- theoretical_standard_deviation^2
 
-actual_standard_deviation <- sd(row_means)
-round(actual_standard_deviation, digits=3)
+# Creating a Data Frame with the results
+type = c("sample", "theoretical")
+value = c(round(sample_variance, digits=3), 
+          round(theoretical_variance, digits=3))
+df_variance = data.frame(value, type)
 
-theory_variance <- theory_standard_deviation^2
-round(theory_variance, digits=3)
-
-actual_variance <- var(row_means)
-round(actual_variance, digits=3)
+# Ploting the results
+qplot(type, value, data=df_variance, 
+      main="Sample Variance versus Theoretical Variance",
+      xlab="", ylab="Variance") +
+      ylim(0.600,0.650)
 ```
+
+The sample variance is ***`r round(sample_variance, digits=3) `*** and the theretical variance is ***`r round(theoretical_variance, digits=3)`*** . The difference is minimal as seen in the chart above.
 
 #### Distribution
-##### Via figures and text, explain how one can tell the distribution is approximately normal.
 ```{r}
-library(ggplot2)
-ggplot(row_means_data_frame,aes(x=row_means)) +
-geom_histogram(binwidth = number_of_interations,fill="blue", color="black", aes(y = ..density..)) +
-labs(title="Density of 40 Numbers from Exponential Distribution", x="Mean of 40 Selections", y="Density") +
-geom_vline(xintercept=actual_mean,size=1.0, color="black") +
-stat_function(fun=dnorm,args=list(mean=actual_mean, sd=actual_standard_deviation),color = "red", size = 1.0) +
-geom_vline(xintercept=theory_mean, size=1.0, color="yellow", linetype = "longdash") +
-stat_function(fun=dnorm,args=list(mean=theory_mean, sd=theory_standard_deviation),color = "orange", size = 1.0)
-
+# Ploting the exponential distribution 
+ggplot(row_means_data_frame, aes(x=row_means)) +
+geom_histogram(binwidth = lambda, fill="blue", color="black", 
+               aes(y = ..density..)) +
+labs(title="Exponential Distribution", x="Mean", y="Density") +
+geom_vline(xintercept=sample_mean, 
+           size=1.0, color="black") +
+stat_function(fun=dnorm, 
+              args=list(mean=sample_mean, 
+                        sd=sample_standard_deviation),
+              size = 1.0, color = "red") +
+geom_vline(xintercept=theoretical_mean, 
+           size=1.0, color="yellow", linetype = "longdash") +
+stat_function(fun=dnorm, 
+              args=list(mean=theoretical_mean, 
+                        sd=theoretical_standard_deviation),
+              size = 1.0, color = "orange")
 ```
+
+The Central Limit Theorem states that for a large sample size, the distribution of the sample means will approach a normal distribution. This is true for any sample of independent random variables from any population distribution, as long as the population has a finite standard deviation. 
+Since these conditions apply in this project example here, then the Central Limit theorem applies, as seen in the chart above.
